<resources>
    <string name="app_name">Weather</string>
    <string name="home">Home</string>
    <string name="favourite">Favorite</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="next_forecast">Next forecast</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="alerts">Alerts</string>
    <string name="favorites">Favorites</string>
    <string name="dash">-</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="notification">Notification</string>
    <string name="add_alert">Add Alert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alert">Alert</string>
    <string name="save">Save</string>
    <string name="initial_step">Initial Step</string>
    <string name="ok">OK</string>
    <string name="unknown">Unknown</string>
    <string name="we_can_t_fetch_your_location_nplease_allow_weather_to_access_your_location">We can\'t fetch your location\nplease allow weather to access your location</string>
    <string name="degreeFormatC">%1$.1f/%2$.1f °C</string>
    <string name="degreeFormatK">%1$.1f/%2$.1f °K</string>
    <string name="degreeFormatF">%1$.1f/%2$.1f °F</string>
    <string name="singleDegreeFormatC">%1.2f °C</string>
    <string name="singleDegreeFormatK">%1.2f °K</string>
    <string name="singleDegreeFormatF">%1.2f °F</string>
    <string name="pressureFormat">%d hpa</string>
    <string name="humidityFormat">%d %%</string>
    <string name="windFormatMeter">%1.2f m/s</string>
    <string name="windFormatMile">%1.2f m/h</string>
    <string name="visibilityFormat">%d m</string>
    <string name="uvi_Format">%.2f UVI"</string>
    <string name="set_location">Set Location</string>
    <string name="specify_your_time">Please specify you time</string>
    <string name="need_location">You need to specify location</string>
    <string name="no_connection">No Connection</string>
    <string name="pick_vaild_place">Unknown pick valid one please</string>
    <string name="turn_on_location">Turn on location please</string>
    <string name="alert_notification_id" translatable="false">1</string>
    <string name="alert_notification_title">Weather State</string>
    <string name="channel_name">alerts</string>
    <string name="channel_description">Notification for weather state</string>
    <string name="no_alerts">Weather is fine, No alerts for scheduled time</string>
    <string name="alert_details">Alert Details</string>
    <string name="sender">Sender:</string>
    <string name="event">Event:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="description">Description:</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="favorites_instruction">Long click on the favorite place to delete it.</string>
    <string name="alert_instruction">Long click on the alert to delete it.</string>
    <string name="tip">Tip</string>
    <string name="weather_is_fine">Weather is fine</string>
    <string name="no_event">No Event</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="dismiss">Dismiss</string>
    <string name="poor_connection">Poor Connection</string>
    <string name="tomorrow">Tomorrow</string>
</resources>