<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/rv_item"
        app:cardCornerRadius="20dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/settingsDialogTitle"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_step"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locationTv"
                style="@style/TextViewStyle"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/settingsRg"
                app:layout_constraintEnd_toStartOf="@id/settingsRg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settingsRg" />

            <RadioGroup
                android:id="@+id/settingsRg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/locationTv"
                app:layout_constraintTop_toBottomOf="@id/settingsDialogTitle">

                <RadioButton
                    android:id="@+id/settingsGpsRb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gps"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/settingsLocationRb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/map"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/notificationTv"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/notification"
                android:textAlignment="textStart"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/settingsRg"
                app:layout_constraintEnd_toEndOf="@+id/locationTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationTv" />

            <Switch
                android:id="@+id/settingsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/settingsRg"
                app:layout_constraintStart_toEndOf="@id/notificationTv"
                app:layout_constraintTop_toTopOf="@id/notificationTv" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ok"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notificationTv" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>