<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/settingsTitleTv"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/item_back"
            android:padding="8dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@id/settingsScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/settingsScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsTitleTv">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".settings.view.SettingsFragment">

                <TextView
                    android:id="@+id/locationSettingsTitle"
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textColor="@color/small_text_light"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/locationSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/locationSettingsCv"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/locationSettingsCv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toStartOf="@id/languageSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/locationSettingsTitle"
                    app:layout_goneMarginTop="16dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rv_item">

                        <RadioButton
                            android:id="@+id/gpsRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/gps"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/mapRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/map"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/languageSettingsTitle"
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/language"
                    android:textAlignment="center"
                    android:textColor="@color/small_text_light"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/languageSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/languageSettingsCv"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/languageSettingsCv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toEndOf="@id/locationSettingsCv"
                    app:layout_constraintTop_toTopOf="@id/locationSettingsCv">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rv_item">

                        <RadioButton
                            android:id="@+id/englishRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/english"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/arabicRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/arabic"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/temperatureSettingsTitle"
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/temperature"
                    android:textAlignment="center"
                    android:textColor="@color/small_text_light"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/temperatureSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/temperatureSettingsCv"
                    app:layout_constraintTop_toBottomOf="@id/locationSettingsCv" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/temperatureSettingsCv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toStartOf="@id/windSpeedSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/temperatureSettingsTitle"
                    app:layout_goneMarginTop="16dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rv_item">

                        <RadioButton
                            android:id="@+id/celsiusRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/celsius"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/kelvinRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/kelvin"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/fahrenheitRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/fahrenheit"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/windSpeedSettingsTitle"
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    android:textColor="@color/small_text_light"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/windSpeedSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/windSpeedSettingsCv"
                    app:layout_constraintTop_toBottomOf="@id/languageSettingsCv" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/windSpeedSettingsCv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="@id/endGuideline"
                    app:layout_constraintStart_toEndOf="@id/temperatureSettingsCv"
                    app:layout_constraintTop_toTopOf="@id/temperatureSettingsCv">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rv_item">

                        <RadioButton
                            android:id="@+id/meterPerSecondRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/meter_sec"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/milePerHourRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/mile_hour"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/notificationSettingsTitle"
                    style="@style/TextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/notification"
                    android:textAlignment="center"
                    android:textColor="@color/small_text_light"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/notificationSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/notificationSettingsCv"
                    app:layout_constraintTop_toBottomOf="@id/temperatureSettingsCv" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/notificationSettingsCv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="@id/temperatureSettingsCv"
                    app:layout_constraintStart_toStartOf="@id/startGuideline"
                    app:layout_constraintTop_toBottomOf="@id/notificationSettingsTitle"
                    app:layout_goneMarginTop="16dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/rv_item">

                        <RadioButton
                            android:id="@+id/enableRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/enable"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/disableRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/disable"
                            android:textColor="@color/white" />

                    </RadioGroup>
                </com.google.android.material.card.MaterialCardView>


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="22dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endGuideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="22dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>